@@ -24,7 +24,7 @@ in
             only for QEMU.
           '';
         };
-        includes = mkOption {
+        includePaths = mkOption {
           default = [ ];
           description = "List of directories to search for DTS includes (.dtsi files)";
           type = types.listOf types.path;
